--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -1,9 +1,34 @@
 <!doctype html>
 <title>{% block title %}{% endblock %} - Colton's Gambling Page</title>
-<link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
-<nav>
-  <h1>Flaskr</h1>
-  <ul>
+<link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+<nav class="navbar navbar-expand-lg bg-light" style="background-color: #9ac434;">
+  <div class="container-fluid">
+    <a class="navbar-brand" style="background-color: #9ac434;" href="#">Colton's Gambling Page</a>
+    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
+    </button>
+    <div class="collapse navbar-collapse" id="navbarNav">
+      <ul class="navbar-nav">
+          {% if g.user %}
+        <li class="nav-item">
+          <a class="nav-link active" aria-current="page" href="{{ url_for('auth.logout') }}">Log out</a>
+        </li>
+          {% else %}
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('auth.register') }}">Register</a>
+        </li>
+        <li class="nav-item">
+          <a class="nav-link" href="{{ url_for('auth.login') }}">Log in</a>
+            {% endif %}
+        </li>
+      </ul>
+    </div>
+  </div>
+</nav>
+
+{#<nav>
+  <h1>Colton's Gambling page</h1>
+    <ul>
     {% if g.user %}
       <li><span>{{ g.user['username'] }}</span>
       <li><a href="{{ url_for('auth.logout') }}">Log Out</a>
@@ -12,7 +37,7 @@
       <li><a href="{{ url_for('auth.login') }}">Log In</a>
     {% endif %}
   </ul>
-</nav>
+</nav>#}
 <section class="content">
   <header>
     {% block header %}{% endblock %}
