--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -1,9 +1,11 @@
 <!doctype html>
 <title>{% block title %}{% endblock %} - Colton's Gambling Page</title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
+<!-- JavaScript Bundle with Popper -->
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
 <nav class="navbar navbar-expand-lg bg-light" style="background-color: #9ac434;">
   <div class="container-fluid">
-    <a class="navbar-brand" style="background-color: #9ac434;" href="#">Colton's Gambling Page</a>
+    <a class="navbar-brand" style="background-color: #9ac434;" href="http://127.0.0.1:5000/">Colton's Gambling Page</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
@@ -21,23 +23,34 @@
           <a class="nav-link" href="{{ url_for('auth.login') }}">Log in</a>
             {% endif %}
         </li>
+        <!-- Button trigger modal -->
+<button type="button" class="btn btn-info" data-bs-toggle="modal" data-bs-target="#exampleModal">
+  About the Site
+</button>
+
+<!-- Modal -->
+<div class="modal fade" id="exampleModal" tabindex="-1" aria-labelledby="exampleModalLabel" aria-hidden="true">
+  <div class="modal-dialog">
+    <div class="modal-content">
+      <div class="modal-header">
+        <h1 class="modal-title fs-5" id="exampleModalLabel">About the Site</h1>
+        <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+      </div>
+      <div class="modal-body">
+        Colton's Gambling Page is a place for bettors to post bets that they think others should know about. Sign up and
+          start posting today!!
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Close</button>
+      </div>
+    </div>
+  </div>
+</div>
       </ul>
     </div>
   </div>
 </nav>
 
-{#<nav>
-  <h1>Colton's Gambling page</h1>
-    <ul>
-    {% if g.user %}
-      <li><span>{{ g.user['username'] }}</span>
-      <li><a href="{{ url_for('auth.logout') }}">Log Out</a>
-    {% else %}
-      <li><a href="{{ url_for('auth.register') }}">Register</a>
-      <li><a href="{{ url_for('auth.login') }}">Log In</a>
-    {% endif %}
-  </ul>
-</nav>#}
 <section class="content">
   <header>
     {% block header %}{% endblock %}
