--- a/flaskr/templates/base.html
+++ b/flaskr/templates/base.html
@@ -1,8 +1,9 @@
 <!doctype html>
 <title>{% block title %}{% endblock %} - Colton's Gambling Page</title>
 <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-Zenh87qX5JnK2Jl0vWa8Ck2rdkQ2Bzep5IDxbcnCeuOxjzrPF/et3URy9Bv1WTRi" crossorigin="anonymous">
-<!-- JavaScript Bundle with Popper -->
+<link rel="stylesheet" href="{{ url_for('static', filename='style.css') }}">
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-OERcA2EqjJCMA+/3y+gxIOqMEjwtxJY7qPCqsdltbNJuaOe923+mo//f6V8Qbsw3" crossorigin="anonymous"></script>
+
 <nav class="navbar navbar-expand-lg bg-light" style="background-color: #9ac434;">
   <div class="container-fluid">
     <a class="navbar-brand" style="background-color: #9ac434;" href="http://127.0.0.1:5000/">Colton's Gambling Page</a>
